--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
   ],
   "devDependencies": {
     "react-router-dom": "^6.30.1"
+  },
+  "dependencies": {
+    "bootstrap": "^5.3.6",
+    "react-bootstrap": "^2.10.10"
   }
 }
