--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "bootstrap": "^5.3.6",
     "papaparse": "^5.5.3",
-    "react-bootstrap": "^2.10.10"
+    "react-bootstrap": "^2.10.10",
+    "use-file-picker": "^2.1.4"
   }
 }
