Unable to specify .CSV file for bulk upload. Converted to copy-paste.

--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.6",
-    "papaparse": "^5.5.3",
     "react-bootstrap": "^2.10.10",
-    "use-file-picker": "^2.1.4"
+    "react-icons": "^5.5.0",
+    "react-papaparse": "^4.4.0"
   }
 }
